# K-Beauty-MCP

./: .gitignore  DEPLOY.md  INTRO.md  LICENSE  PHOTO_ANALYSIS_GUIDE.md  README.md  README_SIMPLE.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  claude_config_example.md  kbeauty_mcp.py  main.py  pyproject.toml  requirements.txt  server.py  test_data.py  test_mcp.py
data/: __init__.py  brands.py  ingredients.py  routines.py
