[project]
name = "k-beauty-mcp"
version = "0.1.0"
description = "A Model Context Protocol server for K-Beauty information and recommendations"
readme = "README.md"
authors = [
    {name = "K-Beauty MCP Contributors"}
]
license = {text = "MIT"}
keywords = ["mcp", "k-beauty", "korean-beauty", "skincare", "cosmetics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/k-beauty-mcp"
Repository = "https://github.com/yourusername/k-beauty-mcp"
Issues = "https://github.com/yourusername/k-beauty-mcp/issues"

[project.scripts]
k-beauty-mcp = "kbeauty_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
